--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -1,7 +1,7 @@
 /* https://github.com/TonyCrane/note/blob/master/docs/css/custom.css */
 
 :root {
-  --md-text-font: "Georia", "LXGW WenKai"; 
+  --md-text-font: "Georia", "LXGW WenKai Screen"; 
   --md-code-font: "Monaco", "Consolas";
 }
 
